test/files/neg/parse-opaque-checks.scala
package object opaqueFailures {
  opaque class A
  opaque object B
  class AbstractTypeOwner {
    opaque type C
  }
}